# markdown-to-exlce

./: .coverage  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-web.txt  requirements.txt  test_web_simple.py
.claude/: settings.local.json
src/: cli.py  converter.py  integration.py  parser.py
tests/: test_cli.py  test_converter.py  test_integration.py  test_parser.py
tests/fixtures/: sample_table.md
tests/web/: test_web_app.py
web/: app.py
web/static/css/: style.css
web/static/js/: app.js
web/templates/: 404.html  500.html  base.html  batch.html  index.html  upload.html
